Fixing the gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,17 @@
 .DS_Store
 
 .prettierignore
+
+### Sass ###
+.sass-cache/
+*.css.map
+*.sass.map
+*.scss.map
+
+### vscode ###
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.code-workspace
